# medsil_equipment_base

./: .env.example  .env_example  .gitignore  README.md  add_migrate_data.py  automap_test.py  create_role-example.sql  database.py  gunicorn.service  insert_into_db.py  insert_ms_acc_data.py  models.py  pyproject.toml  requirements.txt
ER-diagrams/: equipment_medsil.drawio
accembler_db/: get_accdb_data.py
docs/superpowers/plans/: 2026-06-18-admin-restructure.md  2026-06-26-contracts-registry-plan.md  2026-06-27-contract-spare-parts.md
docs/superpowers/specs/: 2026-06-27-contract-spare-part-shipment-design.md
ebase_site/: export_to_xlsx.py  gunicorn_conf.py  insert_into_db.py  manage.py
ebase_site/clients/: admin.py  models.py
ebase_site/clients/migrations/: 0001_initial.py
ebase_site/contracts/: admin.py  apps.py  models.py  signals.py  tests.py
ebase_site/contracts/migrations/: 0001_initial.py  (+1 more)
ebase_site/directory/: admin.py  apps.py  models.py
ebase_site/ebase/: .urls.py.swp  admin.py  admin_filters.py  apps.py  docx_create.py  forms.py  insert_into_db.py  models.py  signals.py  tests.py  urls.py  views.py
ebase_site/ebase_site/: asgi.py  settings.py  urls.py  wsgi.py
ebase_site/logs/: ebase_err.log.2026-06-15
ebase_site/spare_part/: admin.py  admin_filters.py  apps.py  forms.py  models.py  signals.py  tests.py
ebase_site/users/: admin.py  apps.py  models.py
ebase_site/utils/: __init__.py  common_admin.py  export_to_xlsx.py
logger/: logger.py
migrations/: env.py
migrations/versions/: 83dceaf8c4d2_.py  e7a385d247eb_.py
(+60 files in other folders)
