[project]
name = "medsil-equipment-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens==2.4.1",
    "black==24.8.0",
    "click==8.1.7",
    "decorator==5.1.1",
    "django==4.2.16",
    "django-cleanup==9.0.0",
    "django-debug-toolbar==4.4.6",
    "django-extensions==3.2.3",
    "django-shell-plus>=1.1.7",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "greenlet==3.1.1",
    "ipython==8.18.1",
    "jedi==0.19.1",
    "lxml==5.3.0",
    "mako==1.3.5",
    "matplotlib-inline==0.1.7",
    "mypy-extensions==1.0.0",
    "packaging==24.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.47",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "python-decouple==3.8",
    "python-docx==1.1.2",
    "six==1.16.0",
    "stack-data==0.6.3",
    "tomli==2.0.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "unidecode==1.3.8",
    "wcwidth==0.2.13",
]
